# vp

./: .gitignore  CMakeLists.txt  Fl_Value_Input_Spin.H  LICENSE  MODERNIZATION.md  Makefile  Notes.summary  README.md  Vp_Input.H  make.make  sprite_textures.fld.2  sprite_textures.fld.cxx  symbol_menu.cxx  vp.tiff
Screenshots and movies/: Vp_screenshot_5.tiff  Vp_screenshot_6.tiff
building_universal_binaries/: perldoc.perl.org:perlmacosx.html.webloc
data/: edited-date.csv  sampledata1000.txt
data/exoplanets/: download_exoplanets.py
data/higgs/: download_higgs.py
data/nuclides/: README.md  build_nuclides.py  nuclides.parquet
data/omni/: README.md  build_omni.py
data/qm9/: README.md  build_qm9.py
data/scrna/: download_scrna.py
data/sentinel2/: download_sentinel2.py
glyphs/: tmp.raw
glyphs/64x64/: 1.pnm  1.raw
glyphs/64x64/inverted/: 11.c  13.c  3.c  9.c
legacy/: NASA_budget.txt  Vp_Make_Table.cpp  make-OSX-application.csh  order-statistics-test.cpp  pointsprites.notes  sprite_textures.fld  sprite_textures.txt  viewpoints-code-dependencies.ps
legacy/building_universal_binaries/: blog.janik.cz:files:UniversalBinaries:Makefile.webloc  developer.apple.com:technotes:tn2005:tn2137.html.webloc  gemma.apple.com:.webloc
legacy/glyphs/64x64/: 1.rgb  1.txt
legacy/glyphs/64x64/inverted/: 10.c  12.c  1c.c  2.c
legacy/misc/: Makefile  make.make  popupgl  popupgl.cpp  popupgl.cpp.2
legacy/misc/popupgl.app/Contents/: info.plist
misc/: Fl_Value_Input_Spin.cpp  sprite.cpp  string_replace_test.cpp  vp_private.h
scripts/: gpustat.m  sysmon.sh
shaders/: points.wgsl
src/: Brush.h  ColorMap.cpp  ColorMap.h  ColorPanelHelper.h  ColorPanelHelper.mm  ControlPanel.cpp  ControlPanel.h  DataManager.cpp  DataManager.h  Info.plist.in  MainFrame.cpp  MainFrame.h  Normalize.cpp  Normalize.h  VerticalLabel.h  ViewpointsApp.cpp  ViewpointsApp.h  WebGPUCanvas.cpp  WebGPUCanvas.h  WebGPUContext.cpp  WebGPUContext.h  main.cpp  vp.icns
